Fixed overflow issue rich editor

--- a/plugins/rich-editor/src/scss/_richEditor.scss
+++ b/plugins/rich-editor/src/scss/_richEditor.scss
@@ -49,7 +49,7 @@ $richEditor-scrollContainer_overshoot: 48px;
     background: $richEditor_bg;
     height: auto;
     padding: 0;
-    overflow: auto;
+
 
     &.isMenuInset {
         overflow: initial;
